Improved layout: do not set margin for dl so it will get the same bottom margin as defined by the DokuWiki template. This corrects the previously missing space between the definitionlist and the following text.

--- a/style.less
+++ b/style.less
@@ -1,8 +1,7 @@
 /* plugin: definitionlist */
- 
+
 dl.plugin_definitionlist {
-  margin: 0;
-  padding: 1px 0 0.5em 0;
+  padding: 0 0 0.5em 0;
   border-bottom: 1px dashed #e0e0e0;
   font-size: 90%;
 
